# drone_original

./: .gitignore  LICENSE  README.md
docs/: Jetson.md  auto_setup.md  hardware_setup.md
x4_bringup/: CMakeLists.txt  README.md  package.xml
x4_bringup/config/: dds_xrce_profile.xml
x4_bringup/launch/: x4_ap_interface.launch.py  x4_ardupilot.launch.py  x4_gazebo.launch.py  x4_rviz.launch.py  x4_startup.launch.py
x4_description/: CMakeLists.txt  README.md  package.xml
x4_description/meshes/: drone.STL  prop_18x6_CCW.STL  prop_18x6_CW.STL
x4_description/rviz/: x4.rviz
x4_description/sdf/: gazebo.xacro  sensors.xacro  x4.sdf.xacro  x4.xacro
x4_description/urdf/: artag.urdf.xacro  gazebo.xacro  sensors.xacro  x4.urdf.xacro  x4.xacro  x4_material.xacro
x4_gazebo/: CMakeLists.txt  README.md  package.xml
x4_gazebo/config/: gazebo-x4.parm
x4_gazebo/world/: flight_sim.sdf
x4_interfaces/: CMakeLists.txt  README.md  package.xml  plugin.xml
x4_interfaces/action/: CameraImageCapture.action  Landing.action
x4_interfaces/include/x4_interfaces/: x4_hardware_interface.hpp
x4_interfaces/src/: gui.py  x4_hardware_interface.cpp
x4_moveit/: .setup_assistant  CMakeLists.txt  package.xml
x4_moveit/config/: AureliaX4.ros2_control.xacro  AureliaX4.srdf  AureliaX4.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
x4_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
x4_service_scripts/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
x4_service_scripts/x4_service_scripts/: dds_takeoff.py  dds_waypoint.py  mavros_landing.py  mavros_loiter_mode.py  mavros_takeoff.py  mavros_takeoff_RTL.py  mavros_waypoint.py
x4_vision/: CMakeLists.txt  README.md  package.xml
x4_vision/config/: camera_calibration.yaml
x4_vision/include/x4_vision/: aruco_detector.hpp
x4_vision/launch/: camera.launch.py
x4_vision/rviz/: x4_vision.rviz
x4_vision/src/: aruco_detector.cpp
