<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x4_service_scripts</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="todo@todo.com">leafy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend> rosidl_default_runtime </exec_depend>
  <exec_depend>rclpy</exec_depend>
  <member_of_group> rosidl_interface_packages </member_of_group>

  <exec_depend>ament_index_python</exec_depend>
  
  <exec_depend>ardupilot_msgs</exec_depend>
  <exec_depend>ardupilot_sitl</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pytest</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>micro_ros_msgs</depend>
  <exec_depend>python3-geopy</exec_depend>
  <exec_depend>socat</exec_depend>
  <depend>mavros_msgs</depend>

  <test_depend>ament_black</test_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>python3-scipy</test_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>