<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x4_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="120336535+JamesKaluna@users.noreply.github.com">chief</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>
  <depend>v4l2_camera</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  
  <build_export_depend>opencv4</build_export_depend>
  <exec_depend>opencv4</exec_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
